--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,12 @@
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 		</dependency>
+
+		<dependency>
+			<groupId>cn.com</groupId>
+			<artifactId>commomapi</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
