--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-##  ˝æ›‘¥≈‰÷√
-spring.datasource.url=jdbc:mysql://localhost:3306/springbootdb?useUnicode=true&characterEncoding=utf8
-spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://192.168.10.16:3306/geikmp3_20161101?useUnicode=true&characterEncoding=utf8
+spring.datasource.username=geikmp3
+spring.datasource.password=geikmp3
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-## Mybatis ≈‰÷√
-mybatis.typeAliasesPackage=cn.com.domain
-mybatis.mapperLocations=classpath:mapper/*.xml
+krp.datasource.url=jdbc:mysql://192.168.10.10:3306/ink_test?useUnicode=true&characterEncoding=utf8
+krp.datasource.username=krp
+krp.datasource.password=krp
+krp.datasource.driver-class-name=com.mysql.jdbc.Driver
+server.port=8080
